--- a/fase3/menu/css/estilos.css
+++ b/fase3/menu/css/estilos.css
@@ -26,3 +26,43 @@ footer{
     color: black;
     padding: 10px;
 }
+.menu{
+    padding: 0px 20px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+}
+.menu>li{ 
+float: left;
+}
+.menu li a{
+    background-color: black;
+    color: beige;
+    text-decoration: none;
+    padding: 20px 80px;
+    display: block;
+}
+.menu li a:hover{
+    background-color: #FFC898;
+}
+.menu il ul {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    min-width: 140px ;
+}
+.menu li:hover> ul {
+    display: block;
+}
+.menu li ul li {
+    position: relative;
+}
+.menu li ul li ul {
+    right: 140px;
+
+}
